@@ -1299,7 +1299,7 @@ An exception is raised if out of memory</p></td>
 </tr><tr>
 <td><span>l</span></td>
 <td><span>in out</span></td>
-<td><span>doubly_linked_lists.list</span></td>
+<td><span>doubly_linked_lists.list of strings or typeless</span></td>
 <td><span>required</span></td>
 <td><span>the list with the fixed-width strings</span></td>
 </tr>
